<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/menubackground" >

    <AbsoluteLayout
        android:id="@+id/absoluteLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="65dp"
            android:layout_y="463dp"
            android:text="@string/autor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="0dp"
            android:layout_y="137dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tableNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tableName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/tableNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <requestFocus />

            </EditText>

            <TextView
                android:id="@+id/maxPlayersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxPlayers"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/maxPlayersSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/numberOfPlayers" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="1dp"
            android:layout_y="346dp"
            android:gravity="center" >

            <Button
                android:id="@+id/createButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/create" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/back" />
        </LinearLayout>

    </AbsoluteLayout>

</LinearLayout>